# clpbar

./: Makefile  Makefile.am  Makefile.in  README.md  TODO  args.c  args.h  bar  bar.c  config.h  config.h.in  config.status  configure.in  configure~  display.c  display.h  doxygen.conf.in  infofile  io.c  io.h  itest2
autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.3
debian/: changelog
